# shiny_arena

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  components.rs  main.rs  main_ecs.rs  main_menu.rs  main_pokemon.rs  player.rs  sh_menu.rs
src/core/: entities.rs  mod.rs  repository.rs
src/menus/: controls_menu.rs  main_menu.rs  mod.rs
