[package]
name = "shiny_arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = "0.5"
bevy = { version = "0.5.0", features = ["dynamic"] }  # not suitable for releases (see https://bevyengine.org/learn/book/getting-started/setup/)
rand = "0.8.4"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

